--- a/webapp/src/NPuzzle.css
+++ b/webapp/src/NPuzzle.css
@@ -86,9 +86,13 @@ h1 {
 	flex-wrap: wrap;
 	width: 100%;
 }
-.form-input-container {
+.input-container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	width: 100%;
+}
+.input-validation {
+	color: #282828;
+	font-size: 17px;
 }
