--- a/webapp/src/NPuzzle.css
+++ b/webapp/src/NPuzzle.css
@@ -6,6 +6,7 @@ body * {
 	color: #98971a;
 }
 h1 {
+	font-size: 40px;
 	text-align: center;
 }
 .main-container {
@@ -63,7 +64,7 @@ h1 {
 	width: 520px;
 }
 .form-separator {
-	margin: 20px 0;
+	margin: 50px 0;
 }
 .size-input {
 	width: 70px;
@@ -92,7 +93,9 @@ h1 {
 	align-items: center;
 	width: 100%;
 }
-.input-validation {
+.input-validation,
+.solve-button {
+	margin-top: 15px;
 	color: #282828;
 	font-size: 17px;
 }
