--- a/webapp/src/NPuzzle.css
+++ b/webapp/src/NPuzzle.css
@@ -94,11 +94,24 @@ h1 {
 	width: 100%;
 }
 .input-validation,
-.solve-button {
+.generic-button {
 	margin-top: 15px;
 	color: #282828;
 	font-size: 17px;
 }
 .heuristic-input {
 	width: 280px;
+}
+.loading-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.loading-text,
+.loading-container {
+	margin-top: 30px;
+}
+.unsolvable-text {
+	margin-top: 30px;
+	font-size: 21px;
 }
