--- a/webapp/src/NPuzzle.css
+++ b/webapp/src/NPuzzle.css
@@ -27,7 +27,9 @@ h1 {
 	flex-wrap: wrap;
 	height: 520px;
 	justify-content: space-around;
-	width: 520px;
+	max-width: 520px;
+	width: 100%;
+
 }
 .puzzle-case {
 	align-items: center;
@@ -61,7 +63,8 @@ h1 {
 	margin: 8px 0;
 	outline: none;
 	padding: 12px 20px;
-	width: 520px;
+	max-width: 520px;
+	width: 100%;
 }
 .form-separator {
 	margin: 50px 0;
@@ -98,6 +101,7 @@ h1 {
 	margin-top: 15px;
 	color: #282828;
 	font-size: 17px;
+	background-color: white;
 }
 .heuristic-input {
 	width: 280px;
@@ -108,10 +112,26 @@ h1 {
 	align-items: center;
 }
 .loading-text,
-.loading-container {
+.loading-container,
+.stats-container {
 	margin-top: 30px;
 }
 .unsolvable-text {
 	margin-top: 30px;
 	font-size: 21px;
+}
+.stats-container {
+	max-width: 520px;
+	width: 100%;
+}
+.stats-text {
+	margin: 5px 0;
+	font-size: 20px;
+}
+.moves-text {
+	font-size: 20px;
+	margin-top: 20px;
+}
+.stat-value {
+    float: right;
 }
