--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>NPuzzle Web</title>
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
@@ -11,6 +11,6 @@
         <noscript>
             You need to enable JavaScript to run this app.
         </noscript>
-        <script src="/static/index_bundle.jsx"></script>       
+        <script src="/static/js/index_bundle.jsx"></script>       
     </body>
 </html>
