--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>NPuzzle Web</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
